# SPDX-FileCopyrightText: 2023 Jose D. Montoya
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]

[project]
name = "circuitpython-ArrowLine"
description = "CircuitPython library to draw Arrowlines."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    { name = "Jose D. Montoya", email = "arrowline@mailmeto.mozmail.com" },
]
urls = { Homepage = "https://github.com/jposada202020/CircuitPython_ArrowLine.git" }
keywords = ["hardware", "arrowline", "arrows", "circuitpython"]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["arrowline"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { optional = { file = ["optional_requirements.txt"] } }
